fixed some spacing issues in the arcordian

--- a/style.css
+++ b/style.css
@@ -38,24 +38,23 @@ body {
   color: #444;
   cursor: pointer;
   width: 100%;
+  height: 10px;
   text-align: left;
   border: none;
   outline: none;
   display: flex;
   justify-content: space-between;
-  align-content: center;
+  align-items: center;
   font-size: 18px;
   font-weight: 600;
 }
 .accordion::after {
   content: url("assets/images/icon-plus.svg");
   margin-top: -4px;
-  height: 30px;
 }
 .active::after {
   content: url("assets/images/icon-minus.svg");
   margin-top: -4px;
-  height: 30px;
 }
 
 .panel {
